--- a/dresnick.yml
+++ b/dresnick.yml
@@ -17,7 +17,7 @@
       homebrew_cask: name={{item}} state=present
       with_items:
         - atom
-        - iterm
+        - iterm2
         - skitch
         - slack
         - spectacle
