--- a/dresnick.yml
+++ b/dresnick.yml
@@ -21,3 +21,13 @@
         - skitch
         - slack
         - spectacle
+    - name: add to sudoers without password
+      become: yes
+      lineinfile: >
+        dest=/etc/sudoers
+        regexp="{{ item.regexp }}"
+        line="{{ item.line }}"
+        state=present
+        create=true
+      with_items:
+        - { regexp: '^dresnick', line: 'dresnick ALL=(ALL) NOPASSWD: ALL' }
