--- a/dresnick.yml
+++ b/dresnick.yml
@@ -36,3 +36,5 @@
       with_items:
         - { regexp: '^dresnick', line: 'dresnick ALL=(ALL) NOPASSWD: ALL' }
         - { regexp: '^Defaults    verifypw = any', line: 'Defaults    verifypw = any' }
+  roles:
+    - superlumic-osx-defaults
