--- a/requirements.yml
+++ b/requirements.yml
@@ -1,7 +1,7 @@
 ---
 
 - src: https://github.com/superlumic/ansible-role-osx-defaults.git
-  name: roderik.superlumic-osx-defaults
+  name: superlumic-osx-defaults
 #
 # - src: https://github.com/superlumic/ansible-role-computername.git
 #   name: roderik.superlumic-computername
