--- a/roles/osx-defaults/tasks/main.yml
+++ b/roles/osx-defaults/tasks/main.yml
@@ -17,3 +17,14 @@
         key: 'orientation'
         type: string
         value: bottom
+  - osx_defaults: domain="{{ item.domain }}" key="{{ item.key }}" type="{{ item.type }}" value="{{ item.value }}" state=present
+    with_items:
+      # Needed to enable iterm2 session restore
+      - domain: 'Apple Global Domain'
+        key: 'NSQuitAlwaysKeepsWindows'
+        type: boolean
+        value: true
+      - domain: 'Apple Global Domain'
+        key: 'AppleInterfaceStyle'
+        type: string
+        value: Dark
