--- a/dresnick.yml
+++ b/dresnick.yml
@@ -36,7 +36,7 @@
       with_items:
         - { regexp: '^dresnick', line: 'dresnick ALL=(ALL) NOPASSWD: ALL' }
         - { regexp: '^Defaults    verifypw = any', line: 'Defaults    verifypw = any' }
-    - name: Configure lpass agent to never exit
+    - name: Configure lastpass agent to never exit
       lineinfile: >
         dest=~/.lpass/env
         regexp='^LPASS_AGENT_TIMEOUT'
@@ -46,3 +46,4 @@
   roles:
     - osx-defaults
     - scheduled-pmset
+    - atom-config
