Add highlight for fzf preview

--- a/dresnick.yml
+++ b/dresnick.yml
@@ -15,6 +15,7 @@
         - brew-cask-completion
         - ffmpeg
         - fzf
+        - highlight
         - ripgrep
         - git
         - id3v2
