--- a/dresnick.yml
+++ b/dresnick.yml
@@ -26,6 +26,7 @@
     - name: install personal cask applications
       homebrew_cask: name={{item}} state=present
       with_items:
+        - android-file-transfer
         - atom
         - iterm2
         - font-fira-code
@@ -55,8 +56,8 @@
         state=present
         create=true
   roles:
-    - osx-defaults
-    - scheduled-pmset
+    - { role: osx-defaults, tags: osx-defaults }
+    - { role: scheduled-pmset, tags: scheduled-pmset }
     - { role: various, tags: various }
     - { role: amazon-ecr-credential-helper, tags: amazon-ecr-credential-helper }
     - { role: atom-config, tags: atom-config }
