get implisit-dev role from git.soma

--- a/requirements.yml
+++ b/requirements.yml
@@ -1,5 +1,5 @@
 ---
 
-- src: git@github.com:Implisit/superlumic-role-implisit-dev.git
+- src: git@git.soma.salesforce.com:dresnick/superlumic-role-implisit-dev.git
   scm: git
   name: implisit-dev
