fix automatic package upgrade in atom

--- a/local_roles/atom-config/tasks/main.yml
+++ b/local_roles/atom-config/tasks/main.yml
@@ -4,7 +4,7 @@
   changed_when: false
 
 - name: apm upgrade all packages
-  command: 'apm upgrade'
+  command: 'apm upgrade --no-confirm'
   changed_when: false
   register: atom_upgrade_result
 
