--- a/local_roles/osx-defaults/tasks/iterm2.yml
+++ b/local_roles/osx-defaults/tasks/iterm2.yml
@@ -13,30 +13,9 @@
     osx_defaults: domain="com.googlecode.iterm2" key="{{ item.key }}" type="{{ item.type }}" value="{{ item.value }}" state=present
     tags: iterm2
     with_items:
-      - key: 'DimOnlyText'
-        type: boolean
-        value: true
-      - key: 'NoSyncNeverRemindPrefsChangesLostForFile'
-        type: boolean
-        value: true
-      - key: 'NoSyncNeverRemindPrefsChangesLostForFile_selection'
+      - key: 'Default Bookmark Guid'
         type: string
-        value: '0'
-      - key: 'NoSyncPermissionToShowTip'
-        type: boolean
-        value: true
-      - key: 'OnlyWhenMoreTabs'
-        type: boolean
-        value: false
-      - key: 'OpenArrangementAtStartup'
-        type: boolean
-        value: false
-      - key: 'OpenBookmark'
-        type: boolean
-        value: false
-      - key: 'OpenNoWindowsAtStartup'
-        type: boolean
-        value: false
+        value: Regular
       - key: 'PasteTabToStringTabStopSize'
         type: integer
         value: 4
@@ -52,21 +31,12 @@
       - key: 'ShowFullScreenTabBar'
         type: boolean
         value: true
-      - key: 'SplitPaneDimmingAmount'
-        type: string
-        value: '0.54660957532051291'
-      - key: 'TabStyle'
-        type: string
-        value: '1'
+      - key: 'QuitWhenAllWindowsClosed'
+        type: boolean
+        value: true
       - key: 'UseBorder'
         type: boolean
         value: true
-      - key: 'findIgnoreCase_iTerm'
-        type: boolean
-        value: true
-      - key: 'findMode_iTerm'
-        type: string
-        value: '0'
-      - key: 'findRegex_iTerm'
+      - key: 'HideTab'
         type: boolean
         value: false
