--- a/local_roles/scheduled-pmset/tasks/main.yml
+++ b/local_roles/scheduled-pmset/tasks/main.yml
@@ -8,4 +8,4 @@
 
 - name: launch pmset
   shell: launchctl bootstrap gui/1451812232 ~/Library/LaunchAgents/pmset.dresnick.salesforce.com.plist
-  # when: "'pmset.dresnick.salesforce.com' not in pmset_loaded_result.stdout"
+  when: "'pmset.dresnick.salesforce.com' not in pmset_loaded_result.stdout"
