--- a/local_roles/screensaver/defaults/main.yml
+++ b/local_roles/screensaver/defaults/main.yml
@@ -4,7 +4,7 @@ missing_screensavers:
 
 screensaver_priority:
   default: 50
-  Aerial: 51
+  # Aerial: 50
 
 screensaver_active:
   default: 'true'
