--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,2 +1,3 @@
 [defaults]
 roles_path = local_roles:roles:/usr/local/superlumic/config/local_roles:/usr/local/superlumic/roles
+retry_files_enabled = False
