--- a/dresnick.yml
+++ b/dresnick.yml
@@ -21,10 +21,13 @@
     homebrew_cask_apps:
       - android-file-transfer
       - atom
+      - awscli
       - font-fira-code
       - google-play-music-desktop-player
       - iterm2
       - music-manager
+      - openssh
+      - python
       - skitch
       - slack
       - spectacle
@@ -50,6 +53,9 @@
       with_items:
         - { regexp: '^dresnick', line: 'dresnick ALL=(ALL) NOPASSWD: ALL' }
         - { regexp: '^Defaults    verifypw = any', line: 'Defaults    verifypw = any' }
+    - name: add python packages
+      pip:
+        name: virtualenv
   roles:
     - { role: zsh, tags: zsh }
     - { role: osx-defaults, tags: osx-defaults }
