configure hot corners

--- a/local_roles/osx-defaults/handlers/main.yml
+++ b/local_roles/osx-defaults/handlers/main.yml
@@ -2,3 +2,5 @@
   command: killall Dock
 - name: killall cfprefsd
   command: killall cfprefsd
+- name: killall SystemUIServer
+  command: killall SystemUIServer
