--- a/local_roles/osx-defaults/tasks/main.yml
+++ b/local_roles/osx-defaults/tasks/main.yml
@@ -19,6 +19,47 @@
       key: 'orientation'
       type: string
       value: bottom
+
+    # top left screen corner — application windows
+    - domain: 'com.apple.dock'
+      key: 'wvous-tl-corner'
+      type: integer
+      value: 1
+    - domain: 'com.apple.dock'
+      key: 'wvous-tl-modifier'
+      type: integer
+      value: 0
+
+    # top right screen corner — all windows (really Mission Control)
+    - domain: 'com.apple.dock'
+      key: 'wvous-tr-corner'
+      type: integer
+      value: 5
+    - domain: 'com.apple.dock'
+      key: 'wvous-tr-modifier'
+      type: integer
+      value: 0
+
+    # bottom left screen corner — start screen saver
+    - domain: 'com.apple.dock'
+      key: 'wvous-bl-corner'
+      type: integer
+      value: 1
+    - domain: 'com.apple.dock'
+      key: 'wvous-bl-modifier'
+      type: integer
+      value: 0
+
+    # bottom right screen corner — disable screen saver
+    - domain: 'com.apple.dock'
+      key: 'wvous-br-corner'
+      type: integer
+      value: 1
+    - domain: 'com.apple.dock'
+      key: 'wvous-br-modifier'
+      type: integer
+      value: 0
+
 - osx_defaults: domain="{{ item.domain }}" key="{{ item.key }}" type="{{ item.type }}" value="{{ item.value }}" state=present
   notify: killall cfprefsd
   with_items:
@@ -41,3 +82,11 @@
       key: 'InitialKeyRepeat'
       type: int
       value: 15
+
+- osx_defaults: domain="{{ item.domain }}" key="{{ item.key }}" type="{{ item.type }}" value="{{ item.value }}" state=present
+  notify: killall SystemUIServer
+  with_items:
+    - domain: 'com.apple.menuextra.clock'
+      key: 'DateFormat'
+      type: string
+      value: 'EEE d MMM  H:mm:ss'
