Add atom plugin better-git-blame

--- a/local_roles/atom-config/tasks/main.yml
+++ b/local_roles/atom-config/tasks/main.yml
@@ -24,6 +24,7 @@
     # - linter-ansible-syntax
     - atom-beautify
     - atom-python-test
+    - better-git-blame
     - busy-signal
     - highlight-selected
     - intentions
