Don't show desktop for image based xscreensaver screensavers
Also, use 'fortune' output for text based screensavers

--- a/local_roles/screensaver/tasks/main.yml
+++ b/local_roles/screensaver/tasks/main.yml
@@ -7,6 +7,10 @@
 - name: configure RandomExtra screensaver
   import_tasks: configure-random-extra.yml
 
+- name: configure xscreensaver
+  import_tasks: configure-xscreensaver.yml
+  tags: xscreensaver
+
 - name: Set RandomExtra as screensaver
   shell: |
     defaults write com.apple.screensaver askForPassword 1
