--- a/local_roles/screensaver/defaults/main.yml
+++ b/local_roles/screensaver/defaults/main.yml
@@ -13,3 +13,4 @@ screensaver_active:
   WindupRobot: 'false'
   screensaver.shuffle: 'false'
   "iTunes Artwork": 'false'
+  FloatingMessage: 'false'
