--- a/local_roles/screensaver/tasks/configure-xscreensaver.yml
+++ b/local_roles/screensaver/tasks/configure-xscreensaver.yml
@@ -7,9 +7,15 @@
     - BlitSpin
     - DecayScreen
     - Distort
+    - FlipScreen3D
+    - GFlux
+    - MirrorBlob
+    - Ripples
     - RotZoomer
     - SlideScreen
+    - Slip
     - Spotlight
+    - Tessellimage
     - Twang
     - Zoom
 
