iterm2: disable unlimited scrollback and don't set LANG

--- a/local_roles/iterm2/files/regular.plist
+++ b/local_roles/iterm2/files/regular.plist
@@ -4,7 +4,8 @@
       "Name": "Regular",
       "Guid": "Regular",
       "Session Close Undo Timeout": "30",
-      "Unlimited Scrollback": "true",
+      "Scrollback Lines": "9999",
+      "Set Local Environment Vars": "0",
       "Cursor Type": "2",
       "Blur" : true,
       "Custom Directory" : "Advanced",
