--- a/dresnick.yml
+++ b/dresnick.yml
@@ -18,7 +18,6 @@
       - jq
       - openssh
       - python
-      - python@2
       - ripgrep
       - the_silver_searcher
       - tmux
@@ -60,15 +59,15 @@
       pip:
         executable: pip3
         name: virtualenv
-    - name: add python 2 packages
-      pip:
-        executable: pip2
-        name: virtualenv
-    - name: Put link to pip2 in path
-      file:
-        src: "/usr/local/opt/python@2/bin/pip2"
-        dest: "/Users/dresnick/bin/pip2"
-        state: link
+    # - name: add python 2 packages
+    #   pip:
+    #     executable: pip2
+    #     name: virtualenv
+    # - name: Put link to pip2 in path
+    #   file:
+    #     src: "/usr/local/opt/python@2/bin/pip2"
+    #     dest: "/Users/dresnick/bin/pip2"
+    #     state: link
 
   roles:
     - { role: zsh, tags: zsh }
@@ -80,4 +79,5 @@
     - { role: atom-config, tags: atom-config }
     - { role: screensaver, tags: screensaver }
     - { role: ipython, tags: ipython }
+    - { role: minikube, tags: minikube }
     - { role: implisit-dev, tags: implisit-dev }
