rename implisit-dev role

--- a/dresnick.yml
+++ b/dresnick.yml
@@ -108,3 +108,4 @@
     - { role: ipython, tags: ipython }
     - { role: minikube, tags: minikube }
     - { role: implisit-dev, tags: implisit-dev }
+    # - { role: superlumic-role-implisit-dev, tags: implisit-dev }
