--- a/dresnick.yml
+++ b/dresnick.yml
@@ -5,8 +5,8 @@
   vars:
     homebrew_taps:
       - homebrew/core
-      - caskroom/cask
-      - caskroom/fonts
+      - homebrew/cask
+      - homebrew/cask-fonts
     homebrew_installed_packages:
       - asciidoc
       - autossh
