--- a/local_roles/scheduled-pmset/tasks/main.yml
+++ b/local_roles/scheduled-pmset/tasks/main.yml
@@ -7,5 +7,5 @@
   register: pmset_loaded_result
 
 - name: launch pmset
-  shell: launchctl bootstrap gui/1451812232 ~/Library/LaunchAgents/pmset.dresnick.salesforce.com.plist
+  shell: launchctl bootstrap gui/502 ~/Library/LaunchAgents/pmset.dresnick.salesforce.com.plist
   when: "'pmset.dresnick.salesforce.com' not in pmset_loaded_result.stdout"
