--- a/roles/osx-defaults/tasks/main.yml
+++ b/roles/osx-defaults/tasks/main.yml
@@ -74,10 +74,16 @@
       type: string
       value: Dark
 
+    - domain: 'Apple Global Domain'
+      key: 'com.apple.sound.uiaudio.enabled'
+      type: int
+      value: 0
+
     - domain: 'NSGlobalDomain'
       key: 'KeyRepeat'
       type: int
       value: 2
+
     - domain: 'NSGlobalDomain'
       key: 'InitialKeyRepeat'
       type: int
