Get screen saver pics from somewhere else

--- a/roles/screensaver/defaults/main.yml
+++ b/roles/screensaver/defaults/main.yml
@@ -14,3 +14,5 @@ screensaver_active:
   screensaver.shuffle: 'false'
   "iTunes Artwork": 'false'
   FloatingMessage: 'false'
+
+ss_pics_dir: ~/Pictures/screensaver
